--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Research Group</title>
+    <title>ET5-Lab</title>
     <script src="https://cdn.tailwindcss.com"></script>
     <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet">
     <script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
@@ -119,7 +119,7 @@
         <div class="max-w-7xl mx-auto px-4 sm:px-6 lg:px-8">
             <div class="flex justify-between h-16">
                 <div class="flex items-center">
-                    <a href="#" class="text-2xl font-bold text-gray-800">Research Group</a>
+                    <a href="#" class="text-2xl font-bold text-gray-800">ET5-Lab</a>
                 </div>
                 <div class="hidden md:flex items-center space-x-4">
                     <a href="#home" class="text-gray-600 hover:text-blue-600 px-3 py-2">Home</a>
