--- a/index.html
+++ b/index.html
@@ -364,11 +364,19 @@
                     <button class="subtab-button px-4 py-2 mx-2 text-gray-600 bg-gray-300 rounded-full hover:bg-blue-800 hover:text-white" data-subtab="journal-2023">2023</button>
                 </div>
                 <div id="journal-2025" class="subtab-content active">
-                    <div class="bg-gray-50 p-6 rounded-lg shadow-lg">
+                    <dJournal Publications - 2025iv class="bg-gray-50 p-6 rounded-lg shadow-lg">
                         <h3 class="text-xl font-semibold text-gray-800 mb-4">Journal Publications - 2025</h3>
-                        <ul class="list-disc pl-5 text-gray-600 space-y-2">
-                            <li>Doe, J., Smith, J. (2025). "Next-Gen AI Algorithms." Journal of Artificial Intelligence, 46(1), 10-22.</li>
-                        </ul>
+                        <div class="span3">
+                           <a href="https://www.sciencedirect.com/journal/solar-compass" class="thumbnail">
+                           <img class="publications-thumb" src="Solar compass.jpg" alt="Simulation solar MED system"/>
+                           </a>
+                        </div>
+                        <div class="span9">
+                           <h4>Simulation studies and experimental validation on solar multi - effect desalination system</h4>
+                           <br/>
+                           <p>Thilagan K., Advaith S., Mani. A</p>
+                           <a href="https://doi.org/10.1016/j.solcom.2025.100110">Solar Compass, Volume 13, March 2025, 100110</a>
+                        </div>
                     </div>
                 </div>
                 <div id="journal-2024" class="subtab-content">
