--- a/index.html
+++ b/index.html
@@ -365,7 +365,7 @@
                 </div>
                 <div id="journal-2025" class="subtab-content active">
                     <dJournal Publications - 2025iv class="bg-gray-50 p-6 rounded-lg shadow-lg">
-                        <h3 class="text-xl font-semibold text-gray-800 mb-4">Journal Publications - 2025</h3>
+                     <div class="row-fluid">
                         <div class="span3">
                            <a href="https://www.sciencedirect.com/journal/solar-compass" class="thumbnail">
                            <img class="publications-thumb" src="Solar compass.jpg" alt="Simulation solar MED system"/>
@@ -377,6 +377,7 @@
                            <p>Thilagan K., Advaith S., Mani. A</p>
                            <a href="https://doi.org/10.1016/j.solcom.2025.100110">Solar Compass, Volume 13, March 2025, 100110</a>
                         </div>
+                     </div>
                     </div>
                 </div>
                 <div id="journal-2024" class="subtab-content">
