--- a/index.html
+++ b/index.html
@@ -414,12 +414,13 @@
                 <div id="journal-2025" class="subtab-content active">
                     <div class="space-y-4">
                         <div class="pub-card" data-aos="fade-up" data-aos-delay="100">
-                            <img src="https://via.placeholder.com/120x160.png?text=Solar+Compass+2025" alt="Solar Compass 2025 Cover" class="object-cover">
+                            <a href="https://www.sciencedirect.com/journal/energy-and-ai" class="thumbnail">
+                            <img src="Solar compass.jpg" alt="Solar Compass 2025 Cover" class="object-cover"> </a>
                             <div class="pub-details">
                                 <h3>Simulation Studies and Experimental Validation on Solar Multi-effect Desalination System</h3>
                                 <p>Thilagan K., Advait S., Mani A.</p>
                                 <p>Solar Compass, Volume 13, March 2025, 100110</p>
-                                <a href="#">View Article</a>
+                                <a href="https://doi.org/10.1016/j.solcom.2025.100110">View Article</a>
                             </div>
                         </div>
                     </div>
