--- a/index.html
+++ b/index.html
@@ -242,7 +242,7 @@
                     <a href="#about" class="text-gray-600 hover:text-blue-600 px-3 py-2">About</a>
                     <a href="#research" class="text-gray-600 hover:text-blue-600 px-3 py-2">Research</a>
                     <a href="#publications" class="text-gray-600 hover:text-blue-600 px-3 py-2">Publications</a>
-                    <a href="#scholars" class="text-gray-600 hover:text-blue-600 px-3 py-2">Research Scholars</a>
+                    <a href="#team" class="nav-link text-gray-800 hover:text-blue-900">Team</a>
                     <a href="#contact" class="text-gray-600 hover:text-blue-600 px-3 py-2">Contact</a>
                 </div>
                 <div class="md:hidden flex items-center">
@@ -260,7 +260,7 @@
             <a href="#about" class="block px-4 py-2 text-gray-600 hover:bg-gray-100">About</a>
             <a href="#research" class="block px-4 py-2 text-gray-600 hover:bg-gray-100">Research</a>
             <a href="#publications" class="block px-4 py-2 text-gray-600 hover:bg-gray-100">Publications</a>
-            <a href="#scholars" class="block px-4 py-2 text-gray-600 hover:bg-gray-100">Research Scholars</a>
+            <a href="#team" class="nav-link text-gray-800 hover:text-blue-900">Team</a>
             <a href="#contact" class="block px-4 py-2 text-gray-600 hover:bg-gray-100">Contact</a>
         </div>
     </nav>
