--- a/index.html
+++ b/index.html
@@ -573,114 +573,118 @@
         </div>
     </section>
 
-    <!-- Team Section -->
-    <section id="team" class="section bg-gray-100">
+<!-- Team Section -->
+    <section id="team" class="py-24 bg-gray-50">
         <div class="max-w-7xl mx-auto px-4 sm:px-6 lg:px-8">
-            <h2 class="text-3xl md:text-4xl font-bold text-gray-800 mb-6 text-center" data-aos="fade-up">Team</h2>
-            <div class="flex justify-center mb-8" data-aos="fade-up" data-aos-delay="100">
-                <button class="tab-button px-6 py-2 mx-2 text-gray-600 bg-gray-200 rounded-full hover:bg-blue-600 hover:text-white active" data-tab="guide">Guide</button>
-                <button class="tab-button px-6 py-2 mx-2 text-gray-600 bg-gray-200 rounded-full hover:bg-blue-600 hover:text-white" data-tab="scholars">Research Scholars</button>
-                <button class="tab-button px-6 py-2 mx-2 text-gray-600 bg-gray-200 rounded-full hover:bg-blue-600 hover:text-white" data-tab="staff">Staff</button>
+            <div class="text-center fade-in">
+                <h2 class="text-3xl md:text-4xl font-bold text-gray-900 mb-6">Our Experts</h2>
+                <p class="text-lg text-gray-600 max-w-3xl mx-auto mb-12">Meet the dedicated professionals leading our research initiatives.</p>
             </div>
-            <div id="guide" class="tab-content active" data-aos="fade-up" data-aos-delay="200">
-                <div class="grid grid-cols-1 sm:grid-cols-2 lg:grid-cols-3 gap-8">
-                    <div class="team-card bg-white p-6 rounded-lg shadow-lg text-center">
-                        <img src="https://images.unsplash.com/photo-1472099645785-5658abf4ff4e" alt="Guide" class="w-24 h-24 rounded-full mx-auto mb-4">
-                        <h3 class="text-xl font-semibold text-gray-800">Dr. John Doe</h3>
-                        <p class="text-gray-600">Principal Investigator</p>
-                    </div>
-                    <div class="team-card bg-white p-6 rounded-lg shadow-lg text-center">
-                        <img src="https://images.unsplash.com/photo-1494790108377-be9c29b29330" alt="Guide" class="w-24 h-24 rounded-full mx-auto mb-4">
-                        <h3 class="text-xl font-semibold text-gray-800">Dr. Jane Smith</h3>
-                        <p class="text-gray-600">Co-Guide</p>
-                    </div>
+            <div class="fade-in">
+                <!-- Tabs -->
+                <div class="flex justify-center space-x-4 mb-8">
+                    <button class="tab px-6 py-2 rounded-md font-medium text-gray-800 bg-gray-100 hover:bg-gray-200 active" data-tab="guide">Guide</button>
+                    <button class="tab px-6 py-2 rounded-md font-medium text-gray-800 bg-gray-100 hover:bg-gray-200" data-tab="scholars">Research Scholars</button>
+                    <button class="tab px-6 py-2 rounded-md font-medium text-gray-800 bg-gray-100 hover:bg-gray-200" data-tab="staff">Staff</button>
                 </div>
-            </div>
-            <div id="scholars" class="tab-content" data-aos="fade-up" data-aos-delay="200">
-                <div class="flex justify-center mb-6">
-                    <button class="subtab-button px-4 py-2 mx-2 text-gray-600 bg-gray-300 rounded-full hover:bg-blue-800 hover:text-white active" data-subtab="phd">Ph.D.</button>
-                    <button class="subtab-button px-4 py-2 mx-2 text-gray-600 bg-gray-300 rounded-full hover:bg-blue-800 hover:text-white" data-subtab="ms">MS</button>
-                </div>
-                <div id="phd" class="subtab-content active">
-                    <div class="flex justify-center mb-6">
-                        <button class="subtab-button px-4 py-2 mx-2 text-gray-600 bg-gray-300 rounded-full hover:bg-blue-800 hover:text-white active" data-subtab="phd-ongoing">Ongoing</button>
-                        <button class="subtab-button px-4 py-2 mx-2 text-gray-600 bg-gray-300 rounded-full hover:bg-blue-800 hover:text-white" data-subtab="phd-alumni">Alumni</button>
-                    </div>
-                    <div id="phd-ongoing" class="subtab-content active">
-                        <div class="grid grid-cols-1 sm:grid-cols-2 lg:grid-cols-3 gap-8">
-                            <div class="team-card bg-white p-6 rounded-lg shadow-lg text-center">
-                                <img src="https://images.unsplash.com/photo-1507003211169-0a1dd7228f2d" alt="Scholar" class="w-24 h-24 rounded-full mx-auto mb-4">
-                                <h3 class="text-xl font-semibold text-gray-800">Alice Johnson</h3>
-                                <p class="text-gray-600">Ph.D. Candidate (AI & Machine Learning)</p>
-                            </div>
-                            <div class="team-card bg-white p-6 rounded-lg shadow-lg text-center">
-                                <img src="https://images.unsplash.com/photo-1519085360753-afccb1f7b3b1" alt="Scholar" class="w-24 h-24 rounded-full mx-auto mb-4">
-                                <h3 class="text-xl font-semibold text-gray-800">Bob Lee</h3>
-                                <p class="text-gray-600">Ph.D. Candidate (Sustainable Technologies)</p>
-                            </div>
-                        </div>
-                    </div>
-                    <div id="phd-alumni" class="subtab-content">
-                        <div class="grid grid-cols-1 sm:grid-cols-2 lg:grid-cols-3 gap-8">
-                            <div class="team-card bg-white p-6 rounded-lg shadow-lg text-center">
-                                <img src="https://images.unsplash.com/photo-1494790108377-be9c29b29330" alt="Scholar" class="w-24 h-24 rounded-full mx-auto mb-4">
-                                <h3 class="text-xl font-semibold text-gray-800">Dr. Emma Davis</h3>
-                                <p class="text-gray-600">Ph.D. 2023 (Biomedical Research)</p>
-                            </div>
-                            <div class="team-card bg-white p-6 rounded-lg shadow-lg text-center">
-                                <img src="https://images.unsplash.com/photo-1472099645785-5658abf4ff4e" alt="Scholar" class="w-24 h-24 rounded-full mx-auto mb-4">
-                                <h3 class="text-xl font-semibold text-gray-800">Dr. Michael Chen</h3>
-                                <p class="text-gray-600">Ph.D. 2022 (AI & Machine Learning)</p>
-                            </div>
+                <!-- Tab Content -->
+                <div id="guide" class="tab-content active">
+                    <div class="grid grid-cols-1 md:grid-cols-2 lg:grid-cols-3 gap-8">
+                        <div class="card bg-white rounded-xl shadow-md p-6 text-center">
+                            <img src="https://images.unsplash.com/photo-1500648767791-00dcc994a43e?ixlib=rb-4.0.3&auto=format&fit=crop&w=300&q=80" alt="Team Member" class="w-28 h-28 rounded-full mx-auto mb-4">
+                            <h3 class="text-xl font-semibold text-gray-900">Dr. Jane Doe</h3>
+                            <p class="text-gray-600">Principal Investigator</p>
                         </div>
                     </div>
                 </div>
-                <div id="ms" class="subtab-content">
-                    <div class="flex justify-center mb-6">
-                        <button class="subtab-button px-4 py-2 mx-2 text-gray-600 bg-gray-300 rounded-full hover:bg-blue-800 hover:text-white active" data-subtab="ms-ongoing">Ongoing</button>
-                        <button class="subtab-button px-4 py-2 mx-2 text-gray-600 bg-gray-300 rounded-full hover:bg-blue-800 hover:text-white" data-subtab="ms-alumni">Alumni</button>
+                <div id="scholars" class="tab-content">
+                    <!-- Sub-Tabs for Research Scholars -->
+                    <div class="flex justify-center space-x-4 mb-8">
+                        <button class="sub-tab px-6 py-2 rounded-md font-medium text-gray-800 bg-gray-200 hover:bg-gray-300 active" data-sub-tab="phd">Ph.D</button>
+                        <button class="sub-tab px-6 py-2 rounded-md font-medium text-gray-800 bg-gray-200 hover:bg-gray-300" data-sub-tab="ms">MS</button>
                     </div>
-                    <div id="ms-ongoing" class="subtab-content active">
-                        <div class="grid grid-cols-1 sm:grid-cols-2 lg:grid-cols-3 gap-8">
-                            <div class="team-card bg-white p-6 rounded-lg shadow-lg text-center">
-                                <img src="https://images.unsplash.com/photo-1517841905240-472988babdf9" alt="Scholar" class="w-24 h-24 rounded-full mx-auto mb-4">
-                                <h3 class="text-xl font-semibold text-gray-800">Sarah Kim</h3>
-                                <p class="text-gray-600">MS Student (Sustainable Technologies)</p>
+                    <!-- Sub-Tab Content -->
+                    <div id="phd" class="sub-tab-content active">
+                        <div class="flex justify-center space-x-4 mb-8">
+                            <button class="sub-tab px-6 py-2 rounded-md font-medium text-gray-800 bg-gray-200 hover:bg-gray-300 active" data-sub-tab="phd-ongoing">Ongoing</button>
+                            <button class="sub-tab px-6 py-2 rounded-md font-medium text-gray-800 bg-gray-200 hover:bg-gray-300" data-sub-tab="phd-alumni">Alumni</button>
+                        </div>
+                        <div id="phd-ongoing" class="sub-tab-content active">
+                            <div class="grid grid-cols-1 md:grid-cols-2 lg:grid-cols-3 gap-8">
+                                <div class="card bg-white rounded-xl shadow-md p-6 text-center">
+                                    <img src="https://images.unsplash.com/photo-1519085360753-af0119f7cbe7?ixlib=rb-4.0.3&auto=format&fit=crop&w=300&q=80" alt="Team Member" class="w-28 h-28 rounded-full mx-auto mb-4">
+                                    <h3 class="text-xl font-semibold text-gray-900">Alex Carter</h3>
+                                    <p class="text-gray-600">Ph.D Candidate</p>
+                                </div>
+                                <div class="card bg-white rounded-xl shadow-md p-6 text-center">
+                                    <img src="https://images.unsplash.com/photo-1534528741775-53994a69daeb?ixlib=rb-4.0.3&auto=format&fit=crop&w=300&q=80" alt="Team Member" class="w-28 h-28 rounded-full mx-auto mb-4">
+                                    <h3 class="text-xl font-semibold text-gray-900">Sarah Lee</h3>
+                                    <p class="text-gray-600">Ph.D Candidate</p>
+                                </div>
                             </div>
-                            <div class="team-card bg-white p-6 rounded-lg shadow-lg text-center">
-                                <img src="https://images.unsplash.com/photo-1500648767791-00dcc994a43e" alt="Scholar" class="w-24 h-24 rounded-full mx-auto mb-4">
-                                <h3 class="text-xl font-semibold text-gray-800">David Patel</h3>
-                                <p class="text-gray-600">MS Student (Biomedical Research)</p>
+                        </div>
+                        <div id="phd-alumni" class="sub-tab-content">
+                            <div class="grid grid-cols-1 md:grid-cols-2 lg:grid-cols-3 gap-8">
+                                <div class="card bg-white rounded-xl shadow-md p-6 text-center">
+                                    <img src="https://images.unsplash.com/photo-1507003211169-0a1dd7228f2d?ixlib=rb-4.0.3&auto=format&fit=crop&w=300&q=80" alt="Team Member" class="w-28 h-28 rounded-full mx-auto mb-4">
+                                    <h3 class="text-xl font-semibold text-gray-900">David Kim</h3>
+                                    <p class="text-gray-600">Ph.D (Graduated 2023)</p>
+                                </div>
+                                <div class="card bg-white rounded-xl shadow-md p-6 text-center">
+                                    <img src="https://images.unsplash.com/photo-1517841905240-472988babdf9?ixlib=rb-4.0.3&auto=format&fit=crop&w=300&q=80" alt="Team Member" class="w-28 h-28 rounded-full mx-auto mb-4">
+                                    <h3 class="text-xl font-semibold text-gray-900">Lisa Patel</h3>
+                                    <p class="text-gray-600">Ph.D (Graduated 2022)</p>
+                                </div>
                             </div>
                         </div>
                     </div>
-                    <div id="ms-alumni" class="subtab-content">
-                        <div class="grid grid-cols-1 sm:grid-cols-2 lg:grid-cols-3 gap-8">
-                            <div class="team-card bg-white p-6 rounded-lg shadow-lg text-center">
-                                <img src="https://images.unsplash.com/photo-1534528741775-53994a69daeb" alt="Scholar" class="w-24 h-24 rounded-full mx-auto mb-4">
-                                <h3 class="text-xl font-semibold text-gray-800">Lisa Wong</h3>
-                                <p class="text-gray-600">MS 2023 (AI & Machine Learning)</p>
+                    <div id="ms" class="sub-tab-content">
+                        <div class="flex justify-center space-x-4 mb-8">
+                            <button class="sub-tab px-6 py-2 rounded-md font-medium text-gray-800 bg-gray-200 hover:bg-gray-300 active" data-sub-tab="ms-ongoing">Ongoing</button>
+                            <button class="sub-tab px-6 py-2 rounded-md font-medium text-gray-800 bg-gray-200 hover:bg-gray-300" data-sub-tab="ms-alumni">Alumni</button>
+                        </div>
+                        <div id="ms-ongoing" class="sub-tab-content active">
+                            <div class="grid grid-cols-1 md:grid-cols-2 lg:grid-cols-3 gap-8">
+                                <div class="card bg-white rounded-xl shadow-md p-6 text-center">
+                                    <img src="https://images.unsplash.com/photo-1529626455594-4ff0802cfb7e?ixlib=rb-4.0.3&auto=format&fit=crop&w=300&q=80" alt="Team Member" class="w-28 h-28 rounded-full mx-auto mb-4">
+                                    <h3 class="text-xl font-semibold text-gray-900">Rachel Wong</h3>
+                                    <p class="text-gray-600">MS Student</p>
+                                </div>
+                                <div class="card bg-white rounded-xl shadow-md p-6 text-center">
+                                    <img src="https://images.unsplash.com/photo-1531123897727-8f129e1688ce?ixlib=rb-4.0.3&auto=format&fit=crop&w=300&q=80" alt="Team Member" class="w-28 h-28 rounded-full mx-auto mb-4">
+                                    <h3 class="text-xl font-semibold text-gray-900">James Liu</h3>
+                                    <p class="text-gray-600">MS Student</p>
+                                </div>
                             </div>
-                            <div class="team-card bg-white p-6 rounded-lg shadow-lg text-center">
-                                <img src="https://images.unsplash.com/photo-1519085360753-afccb1f7b3b1" alt="Scholar" class="w-24 h-24 rounded-full mx-auto mb-4">
-                                <h3 class="text-xl font-semibold text-gray-800">James Carter</h3>
-                                <p class="text-gray-600">MS 2022 (Sustainable Technologies)</p>
+                        </div>
+                        <div id="ms-alumni" class="sub-tab-content">
+                            <div class="grid grid-cols-1 md:grid-cols-2 lg:grid-cols-3 gap-8">
+                                <div class="card bg-white rounded-xl shadow-md p-6 text-center">
+                                    <img src="https://images.unsplash.com/photo-1506794778202-6d103f6e0e0c?ixlib=rb-4.0.3&auto=format&fit=crop&w=300&q=80" alt="Team Member" class="w-28 h-28 rounded-full mx-auto mb-4">
+                                    <h3 class="text-xl font-semibold text-gray-900">Mark Chen</h3>
+                                    <p class="text-gray-600">MS (Graduated 2023)</p>
+                                </div>
+                                <div class="card bg-white rounded-xl shadow-md p-6 text-center">
+                                    <img src="https://images.unsplash.com/photo-1517365830460-955ce3f6b1f7?ixlib=rb-4.0.3&auto=format&fit=crop&w=300&q=80" alt="Team Member" class="w-28 h-28 rounded-full mx-auto mb-4">
+                                    <h3 class="text-xl font-semibold text-gray-900">Anita Sharma</h3>
+                                    <p class="text-gray-600">MS (Graduated 2022)</p>
+                                </div>
                             </div>
                         </div>
                     </div>
                 </div>
-            </div>
-            <div id="staff" class="tab-content" data-aos="fade-up" data-aos-delay="200">
-                <div class="grid grid-cols-1 sm:grid-cols-2 lg:grid-cols-3 gap-8">
-                    <div class="team-card bg-white p-6 rounded-lg shadow-lg text-center">
-                        <img src="https://images.unsplash.com/photo-1500648767791-00dcc994a43e" alt="Staff" class="w-24 h-24 rounded-full mx-auto mb-4">
-                        <h3 class="text-xl font-semibold text-gray-800">David Patel</h3>
-                        <p class="text-gray-600">Research Assistant</p>
-                    </div>
-                    <div class="team-card bg-white p-6 rounded-lg shadow-lg text-center">
-                        <img src="https://images.unsplash.com/photo-1534528741775-53994a69daeb" alt="Staff" class="w-24 h-24 rounded-full mx-auto mb-4">
-                        <h3 class="text-xl font-semibold text-gray-800">Lisa Wong</h3>
-                        <p class="text-gray-600">Lab Technician</p>
+                <div id="staff" class="tab-content">
+                    <div class="grid grid-cols-1 md:grid-cols-2 lg:grid-cols-3 gap-8">
+                        <div class="card bg-white rounded-xl shadow-md p-6 text-center">
+                            <img src="https://images.unsplash.com/photo-1522529599102-193c0d76b5b6?ixlib=rb-4.0.3&auto=format&fit=crop&w=300&q=80" alt="Team Member" class="w-28 h-28 rounded-full mx-auto mb-4">
+                            <h3 class="text-xl font-semibold text-gray-900">Michael Brown</h3>
+                            <p class="text-gray-600">Lab Manager</p>
+                        </div>
+                        <div class="card bg-white rounded-xl shadow-md p-6 text-center">
+                            <img src="https://images.unsplash.com/photo-1494790108377-be9c29b29330?ixlib=rb-4.0.3&auto=format&fit=crop&w=300&q=80" alt="Team Member" class="w-28 h-28 rounded-full mx-auto mb-4">
+                            <h3 class="text-xl font-semibold text-gray-900">Emma Wilson</h3>
+                            <p class="text-gray-600">Administrative Assistant</p>
+                        </div>
                     </div>
                 </div>
             </div>
