--- a/index.html
+++ b/index.html
@@ -772,6 +772,36 @@
             newsCarousel.scrollBy({ left: cardWidth, behavior: 'smooth' });
         });
 
+
+        // Tab functionality for both Publications and Team
+        const tabs = document.querySelectorAll('.tab');
+        const tabContents = document.querySelectorAll('.tab-content');
+
+        tabs.forEach(tab => {
+            tab.addEventListener('click', () => {
+                const section = tab.closest('section');
+                section.querySelectorAll('.tab').forEach(t => t.classList.remove('active'));
+                section.querySelectorAll('.tab-content').forEach(c => c.classList.remove('active'));
+                tab.classList.add('active');
+                section.querySelector(`#${tab.dataset.tab}`).classList.add('active');
+            });
+        });
+
+        // Sub-tab functionality for Research Scholars (Ph.D and MS)
+        const subTabs = document.querySelectorAll('.sub-tab');
+        const subTabContents = document.querySelectorAll('.sub-tab-content');
+
+        subTabs.forEach(subTab => {
+            subTab.addEventListener('click', () => {
+                const parent = subTab.closest('.sub-tab-content') || subTab.closest('.tab-content');
+                parent.querySelectorAll('.sub-tab').forEach(t => t.classList.remove('active'));
+                parent.querySelectorAll('.sub-tab-content').forEach(c => c.classList.remove('active'));
+                subTab.classList.add('active');
+                parent.querySelector(`#${subTab.dataset.subTab}`).classList.add('active');
+            });
+        });
+
+            
         // Tab Functionality for Publications and Team
         const tabButtons = document.querySelectorAll('.tab-button');
         const tabContents = document.querySelectorAll('.tab-content');
