--- a/index.html
+++ b/index.html
@@ -329,10 +329,12 @@
                     <div id="journal-2025" class="sub-tab-content active">
                         <div class="space-y-6">
                             <div class="publication-item bg-white rounded-xl shadow-md p-6 flex items-start space-x-4">
-                                <img src="https://images.unsplash.com/photo-1506884864968-0a645b8b6582?ixlib=rb-4.0.3&auto=format&fit=crop&w=100&q=80" alt="Journal Cover" class="publication-cover">
+                                <a href="https://www.sciencedirect.com/journal/solar-compass" class="thumbnail">
+                                <img src="images_J_C\journal\Solar compass.jpg" alt="Solar compass cover" class="publication-cover"> 
+                                </a>
                                 <div>
-                                    <h3 class="text-xl font-semibold text-gray-900 mb-2">"Advanced AI for Real-Time Systems"</h3>
-                                    <p class="text-gray-600">Doe, J., & Brown, E. (2025). <em>Journal of Artificial Intelligence Research</em>.</p>
+                                    <h3 class="text-xl font-semibold text-gray-900 mb-2">"Simulation studies and experimental validation on solar multi - effect desalination system"</h3>
+                                    <p class="text-gray-600">Thilagan K., Advaith S., Mani. A (2025). <em>Solar Compass, Volume 13, March 2025, 100110</em>. <a href="https://doi.org/10.1016/j.solcom.2025.100110">Read article</a> </p>
                                 </div>
                             </div>
                         </div>
