--- a/index.html
+++ b/index.html
@@ -333,13 +333,35 @@
                                 <img src="images_J_C\journal\Solar compass.jpg" alt="Solar compass cover" class="publication-cover"> 
                                 </a>
                                 <div>
-                                    <h3 class="text-xl font-semibold text-gray-900 mb-2">"Simulation studies and experimental validation on solar multi - effect desalination system"</h3>
-                                    <p class="text-gray-600">Thilagan K., Advaith S., Mani. A (2025). <em>Solar Compass, Volume 13, March 2025, 100110</em>. <a href="https://doi.org/10.1016/j.solcom.2025.100110">Read article</a> </p>
+                                    <h3 class="text-xl font-semibold text-gray-900 mb-2">Simulation studies and experimental validation on solar multi - effect desalination system</h3>
+                                    <p class="text-gray-600">Thilagan K., Advaith S., Mani. A. <em>Solar Compass, Volume 13, March 2025, 100110</em>. <a href="https://doi.org/10.1016/j.solcom.2025.100110">Read article</a> </p>
                                 </div>
                             </div>
                         </div>
                     </div>
                     <div id="journal-2024" class="sub-tab-content">
+                        <div class="space-y-6">
+                            <div class="publication-item bg-white rounded-xl shadow-md p-6 flex items-start space-x-4">
+                                <a href="https://www.sciencedirect.com/journal/thermal-science-and-engineering-progress" class="thumbnail">
+                                <img src="images_J_C\journal\TSEP.jpg" alt="TSEP cover" class="publication-cover"> 
+                                </a>
+                                <div>
+                                    <h3 class="text-xl font-semibold text-gray-900 mb-2">Experimental insights into heat transfer and pressure drop: A comparative study of copper spray coated and plain corrugated gasket plate heat exchangers</h3>
+                                    <p class="text-gray-600">Vijayakumar S., Advaith S., Mani A. <em>Thermal Science and Engineering Progress, Volume 56, December 2024, 103070</em>. <a href="https://doi.org/10.1016/j.tsep.2024.103070" style="color: blue;">Read article</a></p>
+                                </div>
+                            </div>
+                        </div>
+
+                        <div class="space-y-6">
+                            <div class="publication-item bg-white rounded-xl shadow-md p-6 flex items-start space-x-4">
+                                <img src="https://images.unsplash.com/photo-1506884864968-0a645b8b6582?ixlib=rb-4.0.3&auto=format&fit=crop&w=100&q=80" alt="Journal Cover" class="publication-cover">
+                                <div>
+                                    <h3 class="text-xl font-semibold text-gray-900 mb-2">"Optimizing Machine Learning Models for Real-Time Applications"</h3>
+                                    <p class="text-gray-600">Doe, J., Smith, J., & Brown, E. (2024). <em>Journal of Artificial Intelligence Research</em>.</p>
+                                </div>
+                            </div>
+                        </div>
+
                         <div class="space-y-6">
                             <div class="publication-item bg-white rounded-xl shadow-md p-6 flex items-start space-x-4">
                                 <img src="https://images.unsplash.com/photo-1506884864968-0a645b8b6582?ixlib=rb-4.0.3&auto=format&fit=crop&w=100&q=80" alt="Journal Cover" class="publication-cover">
