--- a/index.html
+++ b/index.html
@@ -334,7 +334,7 @@
                                 </a>
                                 <div>
                                     <h3 class="text-xl font-semibold text-gray-900 mb-2">Simulation studies and experimental validation on solar multi - effect desalination system</h3>
-                                    <p class="text-gray-600">Thilagan K., Advaith S., Mani. A. <em>Solar Compass, Volume 13, March 2025, 100110</em>. <a href="https://doi.org/10.1016/j.solcom.2025.100110">Read article</a> </p>
+                                    <p class="text-gray-600">Thilagan K., Advaith S., Mani. A. <em>Solar Compass, Volume 13, March 2025, 100110</em>. <a href="https://doi.org/10.1016/j.solcom.2025.100110" style="color: blue;">Read article</a></p>    
                                 </div>
                             </div>
                         </div>
@@ -354,20 +354,20 @@
 
                         <div class="space-y-6">
                             <div class="publication-item bg-white rounded-xl shadow-md p-6 flex items-start space-x-4">
-                                <img src="https://images.unsplash.com/photo-1506884864968-0a645b8b6582?ixlib=rb-4.0.3&auto=format&fit=crop&w=100&q=80" alt="Journal Cover" class="publication-cover">
+                                <img src="images_J_C\journal\solar energy.jpg" alt="solar energy Cover" class="publication-cover">
                                 <div>
-                                    <h3 class="text-xl font-semibold text-gray-900 mb-2">"Optimizing Machine Learning Models for Real-Time Applications"</h3>
-                                    <p class="text-gray-600">Doe, J., Smith, J., & Brown, E. (2024). <em>Journal of Artificial Intelligence Research</em>.</p>
+                                    <h3 class="text-xl font-semibold text-gray-900 mb-2">Development and performance evaluation of solar absorption cold storage system for tropical climates</h3>
+                                    <p class="text-gray-600">Vijayakumar S., Mani A., Advaith S. <em>Solar Energy, Volume 279, 1 September 2024, 112822</em>. <a href="https://doi.org/10.1016/j.solener.2024.112822" style="color: blue;">Read article</a></p>
                                 </div>
                             </div>
                         </div>
 
                         <div class="space-y-6">
                             <div class="publication-item bg-white rounded-xl shadow-md p-6 flex items-start space-x-4">
-                                <img src="https://images.unsplash.com/photo-1506884864968-0a645b8b6582?ixlib=rb-4.0.3&auto=format&fit=crop&w=100&q=80" alt="Journal Cover" class="publication-cover">
+                                <img src="images_J_C\journal\ate.jpg" alt="ate Cover" class="publication-cover">
                                 <div>
-                                    <h3 class="text-xl font-semibold text-gray-900 mb-2">"Optimizing Machine Learning Models for Real-Time Applications"</h3>
-                                    <p class="text-gray-600">Doe, J., Smith, J., & Brown, E. (2024). <em>Journal of Artificial Intelligence Research</em>.</p>
+                                    <h3 class="text-xl font-semibold text-gray-900 mb-2">Investigation of heat transfer and pressure drop characteristics in metal-foam filled channels in a plate heat exchanger: A comparative experimental study</h3>
+                                    <p class="text-gray-600">Naresh Chandora, Mani A., Advaith S. <em>Applied Thermal Engineering, Volume 241, 15 March 2024, 122368</em>. <a href="https://doi.org/10.1016/j.applthermaleng.2024.122368" style="color: blue;">Read article</a></p>
                                 </div>
                             </div>
                         </div>
