--- a/index.html
+++ b/index.html
@@ -431,10 +431,10 @@
                     <div id="journal-2025" class="sub-tab-content active">
                         <div class="space-y-6">
                             <div class="publication-item bg-white rounded-xl shadow-md p-6 flex items-start space-x-4">
-                                <img src="https://images.unsplash.com/photo-1506884864968-0a645b8b6582?ixlib=rb-4.0.3&auto=format&fit=crop&w=100&q=80" alt="Journal Cover" class="publication-cover">
+                                <img src="images_J_C\journal\Solar compass.jpg" alt="Solar Compass Cover" class="publication-cover">
                                 <div>
-                                    <h3 class="text-xl font-semibold text-gray-900 mb-2">"Advanced AI for Real-Time Systems"</h3>
-                                    <p class="text-gray-600">Doe, J., & Brown, E. (2025). <em>Journal of Artificial Intelligence Research</em>.</p>
+                                    <h3 class="text-xl font-semibold text-gray-900 mb-2">Simulation studies and experimental validation on solar multi - effect desalination system</h3>
+                                    <p class="text-gray-600">Thilagan K., Advaith S., Mani A. <em>Solar Compass, Volume 13, March 2025, 100110</em>. <a href="https://doi.org/10.1016/j.solcom.2025.100110" style="color: blue;">Read article</a></p>
                                 </div>
                             </div>
                         </div>
@@ -442,10 +442,28 @@
                     <div id="journal-2024" class="sub-tab-content">
                         <div class="space-y-6">
                             <div class="publication-item bg-white rounded-xl shadow-md p-6 flex items-start space-x-4">
-                                <img src="https://images.unsplash.com/photo-1506884864968-0a645b8b6582?ixlib=rb-4.0.3&auto=format&fit=crop&w=100&q=80" alt="Journal Cover" class="publication-cover">
+                                <img src="images_J_C\journal\TSEP.jpg" alt="TSEP Cover" class="publication-cover">
                                 <div>
-                                    <h3 class="text-xl font-semibold text-gray-900 mb-2">"Optimizing Machine Learning Models for Real-Time Applications"</h3>
-                                    <p class="text-gray-600">Doe, J., Smith, J., & Brown, E. (2024). <em>Journal of Artificial Intelligence Research</em>.</p>
+                                    <h3 class="text-xl font-semibold text-gray-900 mb-2">Experimental insights into heat transfer and pressure drop: A comparative study of copper spray coated and plain corrugated gasket plate heat exchangers</h3>
+                                    <p class="text-gray-600">Vijayakumar S., Advaith S., Mani A.<em>Thermal Science and Engineering Progress, Volume 56, December 2024, 103070</em>. <a href="https://doi.org/10.1016/j.tsep.2024.103070" style="color: blue;">Read article</a></p>
+                                </div>
+                            </div>
+                        </div>
+                        <div class="space-y-6">
+                            <div class="publication-item bg-white rounded-xl shadow-md p-6 flex items-start space-x-4">
+                                <img src="images_J_C\journal\solar energy.jpg" alt="solar energy Cover" class="publication-cover">
+                                <div>
+                                    <h3 class="text-xl font-semibold text-gray-900 mb-2">Development and performance evaluation of solar absorption cold storage system for tropical climates</h3>
+                                    <p class="text-gray-600">Vijayakumar S., Mani A., Advaith S.<em>Solar Energy, Volume 279, 1 September 2024, 112822</em>. <a href="https://doi.org/10.1016/j.solener.2024.112822" style="color: blue;">Read article</a></p>
+                                </div>
+                            </div>
+                        </div>
+                        <div class="space-y-6">
+                            <div class="publication-item bg-white rounded-xl shadow-md p-6 flex items-start space-x-4">
+                                <img src="images_J_C\journal\ate.jpg" alt="ATE Cover" class="publication-cover">
+                                <div>
+                                    <h3 class="text-xl font-semibold text-gray-900 mb-2">Investigation of heat transfer and pressure drop characteristics in metal-foam filled channels in a plate heat exchanger: A comparative experimental study</h3>
+                                    <p class="text-gray-600">Naresh Chandora, Mani A., Advaith S.<em>Applied Thermal Engineering, Volume 241, 15 March 2024, 122368</em>. <a href="https://doi.org/10.1016/j.applthermaleng.2024.122368" style="color: blue;">Read article</a></p>
                                 </div>
                             </div>
                         </div>
@@ -453,10 +471,10 @@
                     <div id="journal-2023" class="sub-tab-content">
                         <div class="space-y-6">
                             <div class="publication-item bg-white rounded-xl shadow-md p-6 flex items-start space-x-4">
-                                <img src="https://images.unsplash.com/photo-1516975080664-ed2fc6a32937?ixlib=rb-4.0.3&auto=format&fit=crop&w=100&q=80" alt="Journal Cover" class="publication-cover">
+                                <img src="images_J_C\journal\Energy AI.jpg" alt="Energy AI Cover" class="publication-cover">
                                 <div>
-                                    <h3 class="text-xl font-semibold text-gray-900 mb-2">"Sustainable Energy Systems: A Scalable Approach"</h3>
-                                    <p class="text-gray-600">Smith, J., & Doe, J. (2023). <em>Renewable Energy Reviews</em>.</p>
+                                    <h3 class="text-xl font-semibold text-gray-900 mb-2">Attention boosted autoencoder for building energy anomaly detection</h3>
+                                    <p class="text-gray-600">Durga Prasad Pydi, Advaith S.<em>Energy and AI, Volume 14, October 2023, 100292</em>. <a href="https://doi.org/10.1016/j.egyai.2023.100292" style="color: blue;">Read article</a></p>
                                 </div>
                             </div>
                         </div>
@@ -470,24 +488,13 @@
                         <button class="sub-tab px-6 py-2 rounded-md font-medium text-gray-800 bg-gray-200 hover:bg-gray-300" data-sub-tab="conference-2023">2023</button>
                     </div>
                     <!-- Sub-Tab Content -->
-                    <div id="conference-2025" class="sub-tab-content active">
-                        <div class="space-y-6">
-                            <div class="publication-item bg-white rounded-xl shadow-md p-6 flex items-start space-x-4">
-                                <img src="https://images.unsplash.com/photo-1505685296765-3a5b6206f3a6?ixlib=rb-4.0.3&auto=format&fit=crop&w=100&q=80" alt="Conference Proceedings Cover" class="publication-cover">
-                                <div>
-                                    <h3 class="text-xl font-semibold text-gray-900 mb-2">"Next-Gen Quantum Algorithms"</h3>
-                                    <p class="text-gray-600">Brown, E. (2025). <em>Proceedings of the International Conference on Quantum Computing</em>.</p>
-                                </div>
-                            </div>
-                        </div>
-                    </div>
                     <div id="conference-2024" class="sub-tab-content">
                         <div class="space-y-6">
                             <div class="publication-item bg-white rounded-xl shadow-md p-6 flex items-start space-x-4">
-                                <img src="https://images.unsplash.com/photo-1505685296765-3a5b6206f3a6?ixlib=rb-4.0.3&auto=format&fit=crop&w=100&q=80" alt="Conference Proceedings Cover" class="publication-cover">
+                                <img src="images_J_C\conference\ncrac2024.png" alt="ncrac2024 Cover" class="publication-cover">
                                 <div>
-                                    <h3 class="text-xl font-semibold text-gray-900 mb-2">"Real-Time Data Processing with Advanced Algorithms"</h3>
-                                    <p class="text-gray-600">Doe, J., & Brown, E. (2024). <em>IEEE International Conference on Machine Learning</em>.</p>
+                                    <h3 class="text-xl font-semibold text-gray-900 mb-2">Simulation studies and experimental validation on solar multi-effect desalination system in Kanyakumari</h3>
+                                    <p class="text-gray-600">Thilagan K., Advaith S., Mani. A. <em>8th National and 2nd International Conference on Refrigeration and Air Conditioning, 13-15 March 2024, IIT Madras, Chennai, India, 1-9</em>. <a href="https://ge.iitm.ac.in/ncrac-2024/" style="color: blue;">Read article</a></p>
                                 </div>
                             </div>
                         </div>
