--- a/index.html
+++ b/index.html
@@ -689,11 +689,11 @@
                         <!-- Media Slide 1 -->
                         <div class="media-slide">
                             <div class="media-card">
-                                <img src="https://images.unsplash.com/photo-1506399555627-3b435554beff?ixlib=rb-4.0.3&auto=format&fit=crop&w=600&q=80" alt="Media Clip 1">
+                                <embed src="news\TOI_Chennai_04-06-2025.pdf" type="application/pdf" width="600" height="800" alt="Media Clip 1">
                                 <div class="media-card-content">
-                                    <h3 class="text-xl font-semibold text-gray-900 mb-2">Breakthrough in AI Research</h3>
-                                    <p class="text-gray-600 mb-4">Our team discusses the latest advancements in machine learning on a national news channel.</p>
-                                    <a href="#" class="text-blue-600 hover:text-blue-800 font-medium">Watch Clip</a>
+                                    <h3 class="text-xl font-semibold text-gray-900 mb-2">Times of India Article</h3>
+                                    <p class="text-gray-600 mb-4">IIT-M'S solar-powered desal unit aims at 10K liters of potable water a day</p>
+                                    <a href="https://timesofindia.indiatimes.com/city/chennai/iit-ms-solar-powered-desal-unit-aims-at-10k-litres-of-potable-water-per-day/articleshow/121605041.cms" class="text-blue-600 hover:text-blue-800 font-medium">Read Article</a>
                                 </div>
                             </div>
                         </div>
@@ -702,8 +702,8 @@
                             <div class="media-card">
                                 <img src="https://images.unsplash.com/photo-1516321497487-e288fb19713f?ixlib=rb-4.0.3&auto=format&fit=crop&w=600&q=80" alt="Media Clip 2">
                                 <div class="media-card-content">
-                                    <h3 class="text-xl font-semibold text-gray-900 mb-2">Sustainable Energy Article</h3>
-                                    <p class="text-gray-600 mb-4">An in-depth article on our renewable energy project published in a leading journal.</p>
+                                    <h3 class="text-xl font-semibold text-gray-900 mb-2">Times of India Article</h3>
+                                    <p class="text-gray-600 mb-4">IIT-M'S solar-powered desal unit aims at 10K liters of potable water a day</p>
                                     <a href="#" class="text-blue-600 hover:text-blue-800 font-medium">Read Article</a>
                                 </div>
                             </div>
