--- a/index.html
+++ b/index.html
@@ -689,10 +689,10 @@
                         <!-- Media Slide 1 -->
                         <div class="media-slide">
                             <div class="media-card">
-                                <embed src="news\TOI_Chennai_04-06-2025.pdf" type="application/pdf" width="600" height="800" alt="Media Clip 1">
+                                <embed src="news\TOI_Chennai_04-06-2025.pdf" type="application/pdf" width="600" height="600" alt="Media Clip 1">
                                 <div class="media-card-content">
                                     <h3 class="text-xl font-semibold text-gray-900 mb-2">Times of India Article</h3>
-                                    <p class="text-gray-600 mb-4">IIT-M'S solar-powered desal unit aims at 10K liters of potable water a day</p>
+                                    <p class="text-gray-600 mb-4">IIT-M'S solar-powered desal unit aims at 10K liters of potable water a day. Clip dated : June 05, 2025.</p>
                                     <a href="https://timesofindia.indiatimes.com/city/chennai/iit-ms-solar-powered-desal-unit-aims-at-10k-litres-of-potable-water-per-day/articleshow/121605041.cms" class="text-blue-600 hover:text-blue-800 font-medium">Read Article</a>
                                 </div>
                             </div>
@@ -700,33 +700,33 @@
                         <!-- Media Slide 2 -->
                         <div class="media-slide">
                             <div class="media-card">
-                                <img src="https://images.unsplash.com/photo-1516321497487-e288fb19713f?ixlib=rb-4.0.3&auto=format&fit=crop&w=600&q=80" alt="Media Clip 2">
+                                <img src="news\IITM-LinkedIn_MED.jpeg" alt="Media Clip 2">
                                 <div class="media-card-content">
-                                    <h3 class="text-xl font-semibold text-gray-900 mb-2">Times of India Article</h3>
-                                    <p class="text-gray-600 mb-4">IIT-M'S solar-powered desal unit aims at 10K liters of potable water a day</p>
-                                    <a href="#" class="text-blue-600 hover:text-blue-800 font-medium">Read Article</a>
+                                    <h3 class="text-xl font-semibold text-gray-900 mb-2">IIT M LinkedIn #TechTuesday</h3>
+                                    <p class="text-gray-600 mb-4">In a country like India, where over 90% of land receives ample solar insolation, this solution presents a sustainable, off-grid, and scalable method to address water scarcity using indigenous, clean technology. Clip dated : May, 2025.</p>
+                                    <a href="https://www.linkedin.com/posts/reachiitm_techtuesday-iitmadras-waterinnovation-activity-7327932020595085313-FOBt/?utm_source=share&utm_medium=member_desktop&rcm=ACoAAAm8OO8BD5tRF7BfuCBbUg_Hn8yUL2aVj2I" class="text-blue-600 hover:text-blue-800 font-medium">Read Article</a>
                                 </div>
                             </div>
                         </div>
                         <!-- Media Slide 3 -->
                         <div class="media-slide">
                             <div class="media-card">
-                                <img src="https://images.unsplash.com/photo-1505685296765-3a5b6206f3a6?ixlib=rb-4.0.3&auto=format&fit=crop&w=600&q=80" alt="Media Clip 3">
+                                <img src="news\solar-desalination-success.jpeg" alt="Media Clip 3">
                                 <div class="media-card-content">
-                                    <h3 class="text-xl font-semibold text-gray-900 mb-2">Quantum Computing Interview</h3>
-                                    <p class="text-gray-600 mb-4">Dr. Jane Doe shares insights on quantum cryptography in a podcast.</p>
-                                    <a href="#" class="text-blue-600 hover:text-blue-800 font-medium">Listen Now</a>
+                                    <h3 class="text-xl font-semibold text-gray-900 mb-2">IIT-M TECH TALK</h3>
+                                    <p class="text-gray-600 mb-4">A Solar Multi-Effect Desalination Success!. Clip dated : May 07, 2025.</p>
+                                    <a href="https://tech-talk.iitm.ac.in/a-solar-multi-effect-desalination-success/" class="text-blue-600 hover:text-blue-800 font-medium">Read Article</a>
                                 </div>
                             </div>
                         </div>
                         <!-- Media Slide 4 -->
                         <div class="media-slide">
                             <div class="media-card">
-                                <img src="https://images.unsplash.com/photo-1506399555627-3b435554beff?ixlib=rb-4.0.3&auto=format&fit=crop&w=600&q=80" alt="Media Clip 4">
+                                <img src="news\Hot-and-Cold-techtalk.jpg" alt="Media Clip 4">
                                 <div class="media-card-content">
-                                    <h3 class="text-xl font-semibold text-gray-900 mb-2">Research Group Feature</h3>
-                                    <p class="text-gray-600 mb-4">A documentary clip highlighting our team's collaborative efforts.</p>
-                                    <a href="#" class="text-blue-600 hover:text-blue-800 font-medium">Watch Feature</a>
+                                    <h3 class="text-xl font-semibold text-gray-900 mb-2">IIT-M TECH TALK</h3>
+                                    <p class="text-gray-600 mb-4">Can the sun act as a cooling agent? Don’t be ridiculous! But that’s exactly what we have with solar-powered cold storage systems!. Clip dated : January 21, 2025.</p>
+                                    <a href="https://tech-talk.iitm.ac.in/hot-and-cold/" class="text-blue-600 hover:text-blue-800 font-medium">Read Article</a>
                                 </div>
                             </div>
                         </div>
