--- a/index.html
+++ b/index.html
@@ -601,14 +601,11 @@
                         <div id="phd-alumni" class="sub-tab-content">
                             <div class="grid grid-cols-1 md:grid-cols-2 lg:grid-cols-3 gap-8">
                                 <div class="card bg-white rounded-xl shadow-md p-6 text-center">
-                                    <img src="https://images.unsplash.com/photo-1507003211169-0a1dd7228f2d?ixlib=rb-4.0.3&auto=format&fit=crop&w=300&q=80" alt="Team Member" class="w-28 h-28 rounded-full mx-auto mb-4">
-                                    <h3 class="text-xl font-semibold text-gray-900">David Kim</h3>
-                                    <p class="text-gray-600">Ph.D (Graduated 2023)</p>
-                                </div>
-                                <div class="card bg-white rounded-xl shadow-md p-6 text-center">
-                                    <img src="https://images.unsplash.com/photo-1517841905240-472988babdf9?ixlib=rb-4.0.3&auto=format&fit=crop&w=300&q=80" alt="Team Member" class="w-28 h-28 rounded-full mx-auto mb-4">
-                                    <h3 class="text-xl font-semibold text-gray-900">Lisa Patel</h3>
-                                    <p class="text-gray-600">Ph.D (Graduated 2022)</p>
+                                    <img src="people\thilagan.JPEG" alt="Team Member" class="w-28 h-28 rounded-full mx-auto mb-4">
+                                <a href="https://thilagan-k.github.io/T5/thilagan/thilagan.html" target="_blank">
+                                    <h3 class="text-xl font-semibold text-gray-900">Dr. Thilagan K.</h3>
+                                </a>
+                                    <p class="text-gray-600">Ph.D (Graduated 2025)</p>
                                 </div>
                             </div>
                         </div>
